Fixed x overflow issue.

--- a/src/JobCardsMain/JobCardsMain.css
+++ b/src/JobCardsMain/JobCardsMain.css
@@ -4,6 +4,7 @@
   text-align: center;
   flex-flow: row wrap;
   margin: 0;
+  overflow-x: hidden;
 }
 
 .oneCard {
